<resources>
    <string name="app_name">libruary</string>
    <string name="no_account">Dont have an account yet? <u>Register now</u></string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="rate_the_book">Rate the book</string>
    <string name="write_your_review">Write your review</string>
    <string name="submit_review">Submit Review</string>
    <string name="isbn_hint">ISBN</string>
    <string name="submit">Submit</string>
    <string name="scan">Scan</string>
    <string name="add_book">Add Book</string>
    <string name="add_new_book">Add New Book</string>
    <string name="profile">Profile</string>
    <string name="library">Your Library</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="add_book_activity_title">Add Book</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_review">Add Review</string>
    <string name="reviews">Reviews</string>
    <string name="book_details">Book Details</string>
    <string name="book_cover">Book Cover</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="remove_book">Remove book</string>
    <string name="already_member">Already a member? <u>Login</u></string>
    <string name="books_to_read">Books to read:</string>
    <string name="books_read">Books read:</string>
    <string name="cancel">Cancel</string>
    <string name="your_review">Your Review</string>
    <string name="fill_all_fields">Please fill in all fields</string>
    <string name="registration_successful">Successfully registered!</string>
    <string name="registration_failed">Registration failed: %1$s</string>
</resources>