<?xml version="1.0" encoding="utf-8"?>
<!-- activity_register.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:boxStrokeColor="@color/colorAccent"
        app:counterTextColor="@color/colorAccentDark"
        app:endIconTint="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        app:startIconTint="@color/colorAccent"
        app:suffixTextColor="@color/colorAccentDark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/username_hint"
            android:textColorLink="@color/colorAccent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/colorAccent"
        app:counterTextColor="@color/colorAccentDark"
        app:endIconTint="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        app:startIconTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorLink="@color/colorAccent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/colorAccentDark"
        android:textColorLink="@color/colorAccent"
        android:textSize="14sp"
        app:iconTint="@color/colorPrimary"
        app:rippleColor="#1E343434"
        app:strokeColor="@color/colorPrimary" />

    <Button
        android:id="@+id/loginLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/already_member"
        android:textColor="@color/colorSecondary" />

</LinearLayout>
