<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBookActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            app:navigationIcon="@drawable/backp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/add_book_activity_title"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutISBN"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/isbnEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/isbn_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scanButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/scan"
        android:textColor="@color/colorAccentDark"
        app:icon="@drawable/scan"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@id/textInputLayoutISBN"
        app:layout_constraintStart_toStartOf="@id/textInputLayoutISBN"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutISBN"
        app:layout_constraintWidth_percent="0.7"
        app:rippleColor="#1F20571A"
        app:strokeColor="@color/colorSecondary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/submit"
        android:textColorLink="@color/colorPrimaryDark"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@id/scanButton"
        app:layout_constraintStart_toStartOf="@id/scanButton"
        app:layout_constraintTop_toBottomOf="@id/scanButton"
        app:layout_constraintWidth_percent="0.7" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorSecondaryLight"
        app:itemIconTint="@color/colorAccent"
        app:itemTextColor="@color/colorAccent"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
